# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/scripts/: brain_even.py  brain_games.py
