[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Python project lvl1"
authors = ["Ilya ZoolooS Popov <zooloosik@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
